# entrench

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .trench  README.md  pyproject.toml
entrench/: cli.py  status.py
entrench/embedder/: api.py  ollama.py
